[tool.poetry]
name = "uranus-middleware"
version = "0.1.0"
description = ""

license = "MIT"

authors = [
    "rudeigerc <rudeigerc@gmail.com>"
]

readme = "README.md"

repository = "https://github.com/project-uranus/uranus-middleware"
homepage = "https://github.com/project-uranus/uranus-middleware"

keywords = ["uranus"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-restful = "^0.3.7"
requests = "^2.22"
flask-jwt-simple = "^0.0.3"
eventlet = "^0.31.0"
flask-cors = "^3.0"
flask-sockets = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
yapf = "^0.29.0"
flake8-import-order = "^0.18.1"
pep8-naming = "^0.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
